* adjust code for zbox.

--- a/php.ini
+++ b/php.ini
@@ -63,7 +63,7 @@ date.timezone = Europe/Berlin
 
 [Pdo_mysql]
 pdo_mysql.cache_size = 2000
-pdo_mysql.default_socket=
+pdo_mysql.default_socket= /opt/zbox/tmp/mysql/mysql.sock
 
 [MySQL]
 mysql.allow_local_infile = On
@@ -72,7 +72,7 @@ mysql.cache_size = 2000
 mysql.max_persistent = -1
 mysql.max_links = -1
 mysql.default_port =
-mysql.default_socket =
+mysql.default_socket = /opt/zbox/tmp/mysql/mysql.sock
 mysql.default_host =
 mysql.default_user =
 mysql.default_password =
@@ -83,8 +83,8 @@ mysql.trace_mode = Off
 mysqli.max_persistent = -1
 mysqli.max_links = -1
 mysqli.cache_size = 2000
-mysqli.default_port = 3306
-mysqli.default_socket =
+mysqli.default_port = 
+mysqli.default_socket = /opt/zbox/tmp/mysql/mysql.sock
 mysqli.default_host =
 mysqli.default_user =
 mysqli.default_pw =
