* change for send mail by ssl.

--- a/php.ini
+++ b/php.ini
@@ -132,3 +132,5 @@ opcache.max_accelerated_files=4000
 opcache.revalidate_freq=0
 opcache.fast_shutdown=1
 opcache.enable_cli=1
+
+openssl.cafile=/opt/zbox/etc/php/curl-ca-bundle.crt
