Finish task#3005 升级linux一键安装包,cost:10 left:0

--- a/httpd.zentao.conf
+++ b/httpd.zentao.conf
@@ -53,9 +53,10 @@ LoadModule mime_module modules/mod_mime.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule unixd_module modules/mod_unixd.so
+LoadModule ssl_module modules/mod_ssl.so
 
 # php module.
-LoadModule php5_module modules/libphp5.so
+LoadModule php7_module modules/libphp7.so
 AddType application/x-httpd-php .php .php3 .php4
 
 # directory settings.
@@ -99,6 +100,11 @@ Alias /zentao "/opt/zbox/app/zentao/www/"
   AllowOverride All
   Require all granted
 </Directory>
+<DirectoryMatch "/xampp/zentao/www/.+/.*">
+  <FilesMatch "\.php$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
 
 # setting for zentaopro.
 Alias /pro "/opt/zbox/app/zentaopro/www/"
@@ -107,6 +113,11 @@ Alias /pro "/opt/zbox/app/zentaopro/www/"
   AllowOverride All
   Require all granted
 </Directory>
+<DirectoryMatch "/xampp/zentaopro/www/.+/.*">
+  <FilesMatch "\.php$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
 
 # setting for admin
 Alias /adminer "/opt/zbox/app/adminer"
