--- a/my.cnf
+++ b/my.cnf
@@ -2,42 +2,57 @@
 port   = 3306
 socket = /opt/zbox/tmp/mysql/mysql.sock
 
+[mysqld_safe]
+socket = /opt/zbox/tmp/mysql/mysql.sock
+nice   = 0
+
 [mysqld]
-user       = nobody
-port       = 3306
-socket     = /opt/zbox/tmp/mysql/mysql.sock
-datadir    = /opt/zbox/data/mysql
-pid-file   = /opt/zbox/tmp/mysql/mysqld.pid
-log_error  = /opt/zbox/logs/mysql_error.log
-server-id  = 1
+user     = nobody
+pid-file = /opt/zbox/tmp/mysql/mysqld.pid
+socket   = /opt/zbox/tmp/mysql/mysql.sock
+port     = 3306
+basedir  = /opt/zbox/run/mysql
+datadir  = /opt/zbox/data/mysql
+tmpdir   = /opt/zbox/tmp/mysql
+skip-external-locking
+
 
 bind-address            = 127.0.0.1
-key_buffer              = 16M
-max_allowed_packet      = 1M
+key_buffer_size         = 16M
+max_allowed_packet      = 16M
+thread_stack		= 192K
+thread_cache_size       = 8
 table_open_cache        = 64
 sort_buffer_size        = 512K
 net_buffer_length       = 8K
 read_buffer_size        = 256K
 read_rnd_buffer_size    = 512K
 myisam_sort_buffer_size = 8M
-skip-external-locking
+query_cache_limit = 1M
+query_cache_size  = 16M
+log_error  = /opt/zbox/logs/mysql_error.log
+
+explicit_defaults_for_timestamp
 default-storage-engine=MyISAM
+
+server-id  = 1
 
 [mysqldump]
 quick
+quote-names
 max_allowed_packet = 16M
 
 [mysql]
 no-auto-rehash
 
 [isamchk]
-key_buffer       = 20M
+key_buffer_size  = 20M
 sort_buffer_size = 20M
 read_buffer      = 2M
 write_buffer     = 2M
 
 [myisamchk]
-key_buffer       = 20M
+key_buffer_size  = 20M
 sort_buffer_size = 20M
 read_buffer      = 2M
 write_buffer     = 2M
