--- a/httpd.common.conf
+++ b/httpd.common.conf
@@ -53,9 +53,10 @@ LoadModule mime_module modules/mod_mime.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule unixd_module modules/mod_unixd.so
+LoadModule ssl_module modules/mod_ssl.so
 
 # php module.
-LoadModule php5_module modules/libphp5.so
+LoadModule php7_module modules/libphp7.so
 AddType application/x-httpd-php .php .php3 .php4
 
 # directory settings.
