* adjust for zbox.

--- a/httpd.chanzhi.conf
+++ b/httpd.chanzhi.conf
@@ -59,6 +59,10 @@ LoadModule ssl_module modules/mod_ssl.so
 LoadModule php7_module modules/libphp7.so
 AddType application/x-httpd-php .php .php3 .php4
 
+<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+  SetHandler text/plain
+</FilesMatch>
+
 # directory settings.
 DirectoryIndex index.html index.htm index.php 
 <Directory />
@@ -69,7 +73,17 @@ DirectoryIndex index.html index.htm index.php
   Options Indexes FollowSymLinks 
   AllowOverride All
   Require all granted
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
+<DirectoryMatch "/opt/zbox/app/htdocs/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
+
 <Files ".ht*">
   Require all denied
 </Files>
@@ -87,7 +101,22 @@ CustomLog "/opt/zbox/logs/apache_access_log" combined
   <Directory />
     AllowOverride all
     Require all granted
+
+    <Files "index.php">
+      SetHandler application/x-httpd-php
+    </Files>
+    <Files "upgrade.php">
+      SetHandler application/x-httpd-php
+    </Files>
+    <Files "install.php">
+      SetHandler application/x-httpd-php
+    </Files>
   </Directory>
+  <DirectoryMatch "/opt/zbox/app/chanzhi/www/.+/.*">
+    <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+      SetHandler text/plain
+    </FilesMatch>
+  </DirectoryMatch>
   ErrorLog "/opt/zbox/logs/apache_error_log"
   CustomLog "/opt/zbox/logs/apache_access_log" combind
 </VirtualHost>
@@ -99,4 +128,13 @@ Alias /adminer "/opt/zbox/app/adminer"
   AuthType Basic
   AuthUserFile /opt/zbox/auth/users
   require valid-user
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
+<DirectoryMatch "/opt/zbox/app/adminer/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
