--- a/httpd.zentao.conf
+++ b/httpd.zentao.conf
@@ -59,6 +59,10 @@ LoadModule ssl_module modules/mod_ssl.so
 LoadModule php7_module modules/libphp7.so
 AddType application/x-httpd-php .php .php3 .php4
 
+<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+  SetHandler text/plain
+</FilesMatch>
+
 # directory settings.
 DirectoryIndex index.html index.htm index.php 
 <Directory />
@@ -69,7 +73,17 @@ DirectoryIndex index.html index.htm index.php
   Options Indexes FollowSymLinks 
   AllowOverride All
   Require all granted
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
+<DirectoryMatch "/opt/zbox/app/htdocs/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
+
 <Files ".zt*">
   Require all denied
 </Files>
@@ -99,9 +113,22 @@ Alias /zentao "/opt/zbox/app/zentao/www/"
   Options Indexes FollowSymLinks
   AllowOverride All
   Require all granted
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "upgrade.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "install.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "checktable.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
-<DirectoryMatch "/xampp/zentao/www/.+/.*">
-  <FilesMatch "\.php$">
+<DirectoryMatch "/opt/zbox/app/zentao/www/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
     SetHandler text/plain
   </FilesMatch>
 </DirectoryMatch>
@@ -112,9 +139,22 @@ Alias /pro "/opt/zbox/app/zentaopro/www/"
   Options Indexes FollowSymLinks
   AllowOverride All
   Require all granted
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "upgrade.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "install.php">
+    SetHandler application/x-httpd-php
+  </Files>
+  <Files "checktable.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
-<DirectoryMatch "/xampp/zentaopro/www/.+/.*">
-  <FilesMatch "\.php$">
+<DirectoryMatch "/opt/zbox/app/zentaopro/www/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
     SetHandler text/plain
   </FilesMatch>
 </DirectoryMatch>
@@ -126,4 +166,13 @@ Alias /adminer "/opt/zbox/app/adminer"
   AuthType Basic
   AuthUserFile /opt/zbox/auth/users
   require valid-user
+
+  <Files "index.php">
+    SetHandler application/x-httpd-php
+  </Files>
 </Directory>
+<DirectoryMatch "/opt/zbox/app/adminer/.+/.*">
+  <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+    SetHandler text/plain
+  </FilesMatch>
+</DirectoryMatch>
