* change for newest version.

--- a/my.cnf
+++ b/my.cnf
@@ -34,6 +34,7 @@ log_error  = /opt/zbox/logs/mysql_error.log
 
 explicit_defaults_for_timestamp
 default-storage-engine=MyISAM
+default-tmp-storage-engine=MYISAM
 
 server-id  = 1
 
