--- a/httpd.zentao.conf
+++ b/httpd.zentao.conf
@@ -89,10 +89,10 @@ DirectoryIndex index.html index.htm index.php
 </Files>
 
 # logs
-ErrorLog "|/opt/zbox/run/apache/rotatelogs /opt/zbox/logs/apache_error_%Y%m%d.log 10M"
+ErrorLog "/opt/zbox/logs/apache_error_log"
 LogLevel warn
 LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-CustomLog "|/opt/zbox/run/apache/rotatelogs /opt/zbox/logs/apache_access_%Y%m%d.log 10M" combined
+CustomLog "/opt/zbox/logs/apache_access_log" combined
 
 # If you want visit zentao like http://localhost/, uncomment these lines.
 #<VirtualHost *:80>
