* adjust for build zbox.

--- a/php.ini
+++ b/php.ini
@@ -33,7 +33,7 @@ log_errors_max_len = 1024
 ignore_repeated_errors = Off
 ignore_repeated_source = Off
 report_memleaks = On
-track_errors = On
+track_errors = Off
 html_errors = On
 error_log =  "/opt/zbox/logs/php_error_log"
 variables_order = "GPCS"
